@@ -1,7 +1,7 @@
 Package: recount
 Title: Explore and download data from the recount project
-Version: 1.10.1
-Date: 2019-05-22
+Version: 1.10.2
+Date: 2019-06-06
 Authors@R: c(person("Leonardo", "Collado-Torres", role = c("aut", "cre"),
     email = "lcolladotor@gmail.com", comment = c(ORCID = "0000-0003-2140-308X")),
     person("Abhinav", "Nellore", role = "ctb",
